--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -726,8 +726,8 @@
 					return;
 				assert(address !== "" || !(/[()\[\]{}]/.test(address)));
 				localStorage.setItem("location_", JSON.stringify({"latitude": latitude, "longitude": longitude, "address": address, "ranged": 1}));
-				localStorage.setItem("location_name", "Input(" + latitude + ", " + longitude + ", " + address + ")");
-				document.getElementById("location-current-div").innerText = "Current location: " + localStorage.getItem("location_name");
+				localStorage.setItem("location_name", `Input(${latitude}, ${longitude}, ${address})`);
+				document.getElementById("location-current-div").innerText = `Current location: ${localStorage.getItem("location_name")}`;
 			}
 			catch (err) {
 				alert("Invalid input.");
