--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -8,7 +8,7 @@
 	<script src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.20.2/aliplayer-h5-min.js"></script>
 	<script src="xdcheckin/static/locations.js"></script>
 	<script src="static/classrooms.js"></script>
-	<script async defer src="https://xdcheckin.git.pnxlr.eu.org/src/backend/static/classrooms.js" onload="listifyClassrooms();"></script>
+	<script async defer src="https://xdcheckin.git.pnxlr.eu.org/src/xdcheckin/server/static/classrooms.js" onload="listifyClassrooms();"></script>
 
 	<head>
 		<style>
@@ -24,11 +24,11 @@
 		<div id="xdcheckin-update-div" style="text-align: center; font-weight: bold;"></div>
 
 		<div id="chaoxing-buttons" class="div-center">
-			<button id="chaoxing-login-button" onclick="chaoxingPromptLogin();">Chaoxing Login</button>
-			<button id="chaoxing-logout-button" onclick="chaoxingPromptLogout();" style="display: none;">Chaoxing Logout</button>
-			<button id="chaoxing-curriculum-button" onclick="hideOtherDivs('curriculum-list-div').then(displayDiv('curriculum-list-div'));" style="display: none">Show Curriculum</button>
-			<button id="chaoxing-locations-button" onclick="hideOtherDivs('locations-list-div').then(displayDiv('locations-list-div'));" style="display: none">Select Location</button>
-			<button id="chaoxing-activities-button" onclick="if (document.getElementById('activities-list-div').style.display == 'none') {hideOtherDivs('activities-list-div').then(getActivities()).then(displayDiv('activities-list-div'));} else displayDiv('activities-list-div');" style="display: none">Check Activities</button>
+			<button id="chaoxing-login-button" onclick="chaoxingPromptLogin();">Login</button>
+			<button id="chaoxing-logout-button" onclick="chaoxingPromptLogout();" style="display: none;">Logout</button>
+			<button id="chaoxing-curriculum-button" onclick="hideOtherDivs('curriculum-list-div').then(displayDiv('curriculum-list-div'));" style="display: none">Curriculum</button>
+			<button id="chaoxing-locations-button" onclick="hideOtherDivs('locations-list-div').then(displayDiv('locations-list-div'));" style="display: none">Location</button>
+			<button id="chaoxing-activities-button" onclick="if (document.getElementById('activities-list-div').style.display == 'none') {hideOtherDivs('activities-list-div').then(getActivities()).then(displayDiv('activities-list-div'));} else displayDiv('activities-list-div');" style="display: none">Activities</button>
 		</div>
 		<div id="curriculum-list-div" style="display: none"></div>
 		<div id="locations-list-div" style="display: none">
@@ -40,9 +40,9 @@
 		<div id="xdcheckin-title-div" class="div-center" style="display: none; font-size:48px; font-family: sans-serif; font-weight: bold;">Xdcheckin</div>
 
 		<div id="classrooms-buttons-div" class="div-center" style="display: none;">
-			<button onclick="hideOtherDivs('classrooms-list-div').then(displayDiv('classrooms-list-div'));">Select Classroom</button>
-			<button onclick="inputClassroom();">Load URL</button>
-			<button id="extract-classroom-button" onclick="extractClassroom();" style="display: none;">Extract URL</button>
+			<button onclick="hideOtherDivs('classrooms-list-div').then(displayDiv('classrooms-list-div'));">Classroom</button>
+			<button onclick="inputClassroom();">Load</button>
+			<button id="extract-classroom-button" onclick="extractClassroom();" style="display: none;">Extract</button>
 		</div>
 		<div id="classrooms-list-div" style="display: none;"></div>
 		<br>
@@ -368,7 +368,7 @@
 			listifyClassrooms.buildingsArr = [];
 			listifyClassrooms.buildingNamesArr = [];
 			let b = document.createElement("button");
-			b.innerText = "I'm Feeling Lucky";
+			b.innerText = "Random";
 			b.setAttribute("onclick", "randClassroom()");
 
 			let e = document.getElementById("classrooms-list-div");
