--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -128,6 +128,7 @@
 		listifyLocations();
 		listifyClassrooms();
 		resizePlayers().then(enablePlayers());
+		window.addEventListener("resize", resizePlayers());
 		xdcheckinCheckUpdates();
 
 		/*
