--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -50,7 +50,6 @@
 		<div id="players-buttons-div" class="div-center" style="display: none;">
 			<button onclick="if (initPlayers.player0) initPlayers.player0.initPlay(); if (initPlayers.player1) initPlayers.player1.initPlay(); if (initPlayers.player2) initPlayers.player2.initPlay(); if (initPlayers.player3) initPlayers.player3.initPlay();">Play All</button>
 			<button onclick="if (initPlayers.player0) initPlayers.player0.stop(); if (initPlayers.player1) initPlayers.player1.stop(); if (initPlayers.player2) initPlayers.player2.stop(); if (initPlayers.player3) initPlayers.player3.stop(); cameraOff();">Stop All</button>
-			<button onclick="resizePlayers();">Resize All</button>
 		</div>
 		<br>
 
@@ -416,7 +415,7 @@
 		}
 
 		async function inputClassroom() {
-			let input = prompt("Input the extracted URL:");
+			let input = prompt("Input livestream URL to play:");
 			if (input === null)
 				return;
 			if (input === "")
@@ -428,7 +427,7 @@
 		}
 
 		async function extractClassroom() {
-			let input = prompt("Input liveId or livestream URL:");
+			let input = prompt("Input liveId or URL to extract livestream URL:");
 			if (input === null)
 				return;
 			if (input === "")
@@ -689,7 +688,7 @@
 				return;
 			listifyLocations.calling = true;
 			let b = document.createElement("button");
-			b.innerText = "Input Location";
+			b.innerText = "Input";
 			b.setAttribute("onclick", "inputLocation();");
 			let e = document.getElementById("locations-list-div");
 			e.appendChild(b);
