--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -371,6 +371,7 @@
 			b.innerText = "Load";
 			b.setAttribute("onclick", "inputClassroom();");
 			e.appendChild(b);
+			b = document.createElement("button");
 			b.innerText = "Random";
 			b.setAttribute("onclick", "randClassroom();");
 			e.appendChild(b);
